# meta_skill

./: AGENTS.md  Cargo.toml  PLAN.md  README.md
.beads/: issues.jsonl
benches/: rich_output_perf.rs
migrations/: 013_add_provider.sql  014_add_archive_metadata.sql
src/: app.rs  main.rs
src/beads/: client.rs  concurrent_tests.rs  version.rs  wal_safety_tests.rs
src/cass/: mining.rs
src/cli/: mod.rs
src/cli/commands/: backup.rs  build.rs  compress.rs  doctor.rs  evidence.rs  experiment.rs  graph.rs  index.rs  init.rs  list.rs  load.rs  mcp.rs  mod.rs  providers.rs  route.rs  security.rs  show.rs
src/cli/formatters/: search_results.rs  skill_card.rs
src/context/: scoring.rs
src/core/: disclosure.rs  mod.rs  resolution.rs  resolution_cache.rs  skill.rs  spec_lens.rs
src/dedup/: mod.rs
src/graph/: bv.rs  skills.rs
src/import/: mod.rs  provider.rs
src/lint/rules/: mod.rs  quality.rs
src/output/: messages.rs  rich_output.rs  theme.rs
src/search/: cache.rs  content_cache.rs  filters.rs  mod.rs  tantivy.rs
src/security/: acip.rs
src/storage/: git.rs  migrations.rs  mod.rs  sqlite.rs  tx.rs
src/test_utils/: arbitrary.rs
src/testing/: definition.rs  runner.rs  steps.rs
tests/: cli.rs
tests/e2e/: auto_load_workflow.rs  backup_workflow.rs  cass_workflow.rs  cross_project_workflow.rs  dedup_workflow.rs  experiment_workflow.rs  fixture.rs  graph_workflow.rs  import_workflow.rs  list_workflow.rs  load_workflow.rs  main.rs  mcp_workflow.rs  provider_init_workflow.rs  prune_workflow.rs  rich_output_workflow.rs  search_workflow.rs  show_workflow.rs  suggestions_workflow.rs  sync_workflow.rs  template_workflow.rs  verification_suite.rs
tests/fixtures/cass/: README.md
tests/fixtures/cass/extractions/: debugging-skill.json
tests/fixtures/cass/sessions/: session-001.jsonl  session-002.jsonl  session-003.jsonl
tests/integration/: backup_tests.rs  beads_real_tests.rs  fixture.rs  fixture_tests.rs
tests/properties/: roundtrip_tests.rs  safety_tests.rs
tests/snapshots/: rich_output_visual.rs
tests/unit/: graph_tests.rs  output_detection_tests.rs
