[package]
name = "ms"
version = "0.1.2"
edition = "2024"
resolver = "2"
autobins = false
authors = ["Jeffrey Emanuel <jeff@jeffreyemanuel.dev>"]
description = "Meta Skill - Mine CASS sessions to generate Claude Code skills"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/meta_skill"
homepage = "https://github.com/Dicklesworthstone/meta_skill"
keywords = ["cli", "skills", "ai", "claude", "cass"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"
exclude = [
    ".github/",
    ".beads/",
    "scripts/",
    "*.md",
    "!README.md",
]

[[bin]]
name = "ms"
path = "src/main.rs"

[[bin]]
name = "test_beads_e2e"
path = "src/bin/test_beads_e2e.rs"
test = false
bench = false
required-features = ["beads-e2e-bin"]

[dependencies]
# CLI
clap = { version = "4.5.60", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "4.5.65"

# Async runtime
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "signal"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "1.0.7"
toon_rust = { package = "tru", git = "https://github.com/Dicklesworthstone/toon_rust" }

# Database
rusqlite = { version = "0.39.0", features = ["bundled", "modern_sqlite"] }

# Search
tantivy = "0.26.1"

# Git (use vendored-openssl for musl cross-compilation)
git2 = { version = "0.20.3", features = ["vendored-openssl"] }

# Terminal output
colored = "3.0.0"
indicatif = "0.18.3"
console = "0.16.3"
rich_rust = { version = "0.2.0", features = ["full"] }

# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"

# High-performance text processing
regex = "1.12.2"
memchr = "2.7.6"
unicode-normalization = "0.1.25"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "rustls"] }
urlencoding = "2.1.3"

# Semantic search / embeddings
half = "2.7.1"
wide = "1.1.1"
ring = "0.17.14"

# Parallelism
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "ansi", "json"] }

# Authentication
keyring = "3.6.1"
atty = "0.2.14"
open = "5.3.2"

# Utilities
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1.22.0", features = ["v4"] }
dirs = "6.0.0"
walkdir = "2.5.0"
glob = "0.3.3"
sha2 = "0.11"
blake3 = "1.8"
hex = "0.4.3"
base64 = "0.22.1"
itertools = "0.14.0"
textwrap = "0.16.2"
semver = { version = "1.0.28", features = ["serde"] }
fs2 = "0.4.3"
hostname = "0.4.2"
libc = "0.2.180"
tempfile = "3.27.0"
rand = "0.10"
rand_distr = "0.6"
which = "8.0.2"
humantime-serde = "1.1.1"
lru = "0.17"

[build-dependencies]
vergen-gix = { version = "1.0.9", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.2.0"
predicates = "3.1.3"
insta = { version = "1.46.0", features = ["json", "yaml"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.9.0"
proptest-derive = "0.8.0"
httpmock = "0.8.2"

[features]
default = []
beads-e2e-bin = []

[[bench]]
name = "search_perf"
harness = false

[[bench]]
name = "rich_output_perf"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# Profiling profile: release optimizations with debug symbols for flamegraph/perf
# Usage: cargo build --profile=profiling
# Then: cargo flamegraph --profile=profiling --bin ms -- search "query"
[profile.profiling]
inherits = "release"
debug = true
strip = false

[lints.rust]
# Changed from "forbid" to "deny" to allow test modules to use unsafe for
# env::set_var/remove_var (required by Rust 2024 edition). Tests use #[allow(unsafe_code)].
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
